manifests/cluster-addons/sonarr/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: sonarr
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: sonarr
            tailscale.com/parent-resource-ns: sonarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: seerr
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: jellyfin
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: '9696'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: qbittorrent
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sabnzbd
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    - toFQDNs:
        - matchName: 'services.sonarr.tv'
        - matchName: 'thexem.info'
        - matchName: 'api.nzbgeek.info'
        - matchName: 'ninjacentral.co.za'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
